salesforce/force-app/main/default/objects/Provider__c/fields/Birth_Country__c.field-meta.xml
<CustomField>
    <fullName>Birth_Country__c</fullName>
    <label>Birth Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>