salesforce/force-app/main/default/objects/Provider__c/fields/CAQH_ID__c.field-meta.xml
<CustomField>
    <fullName>CAQH_ID__c</fullName>
    <label>CAQH ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>