salesforce/force-app/main/default/objects/Provider__c/fields/Cred_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Cred_End_Date__c</fullName>
    <description></description>
    <label>Cred End Date</label>
    <type>Date</type>
</CustomField>