salesforce/force-app/main/default/objects/Provider__c/fields/Credentialing_Status__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Status__c</fullName>
    <description></description>
    <label>Credentialing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Active</fullName>
        </value>
        <value>
            <fullName>Inactive</fullName>
        </value>
        <value>
            <fullName>Pending</fullName>
        </value>
        <value>
            <fullName>Suspended</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>