salesforce/force-app/main/default/objects/Provider__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <description>ASC, Imaging, Clinic, SNF, etc.</description>
    <label>Facility Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>