salesforce/force-app/main/default/objects/Provider__c/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <label>Federal Tax ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>