salesforce/force-app/main/default/objects/Provider__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Male</fullName>
        </value>
        <value>
            <fullName>Female</fullName>
        </value>
        <value>
            <fullName>Non_Binary</fullName>
            <label>Non-binary</label>
        </value>
        <value>
            <fullName>Prefer_Not_To_Say</fullName>
            <label>Prefer not to say</label>
        </value>
        <value>
            <fullName>Unknown</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>