salesforce/force-app/main/default/objects/Provider__c/fields/Medicaid_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Number__c</fullName>
    <label>Medicaid Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>