salesforce/force-app/main/default/objects/Provider__c/fields/Medicare_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Number__c</fullName>
    <label>Medicare Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>