salesforce/force-app/main/default/objects/Provider__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>