salesforce/force-app/main/default/objects/Provider__c/fields/Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Name_Suffix__c</fullName>
    <label>Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>