salesforce/force-app/main/default/objects/Provider__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <description></description>
    <label>Organization Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>