salesforce/force-app/main/default/objects/Provider__c/fields/Practice_State__c.field-meta.xml
<CustomField>
    <fullName>Practice_State__c</fullName>
    <label>Practice State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>