salesforce/force-app/main/default/objects/Provider__c/fields/Preferred_Languages__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Languages__c</fullName>
    <label>Preferred Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>