salesforce/force-app/main/default/objects/Provider__c/fields/Recred_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Recred_Due_Date__c</fullName>
    <description></description>
    <label>Recred Due Date</label>
    <type>Date</type>
</CustomField>