salesforce/force-app/main/default/objects/Provider__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description></description>
    <label>Specialty</label>
    <length>120</length>
    <type>Text</type>
</CustomField>