salesforce/force-app/main/default/objects/Provider__c/fields/Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Type__c</fullName>
    <description></description>
    <label>Subject Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Practitioner</fullName>
        </value>
        <value>
            <fullName>Facility</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>