salesforce/force-app/main/default/objects/Provider__c/listViews/Facilities.listView-meta.xml
<ListView>
    <fullName>Facilities</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Facility_Type__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Credentialing_Status__c</columns>
    <columns>Recred_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject_Type__c</field>
        <operation>equals</operation>
        <value>Facility</value>
    </filters>
    <label>Facilities</label>
</ListView>