salesforce/force-app/main/default/objects/Provider__c/listViews/Practitioners.listView-meta.xml
<ListView>
    <fullName>Practitioners</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>NPI__c</columns>
    <columns>Specialty__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Credentialing_Status__c</columns>
    <columns>Recred_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject_Type__c</field>
        <operation>equals</operation>
        <value>Practitioner</value>
    </filters>
    <label>Practitioners</label>
</ListView>